Add wordmark style for products view heading

--- a/locales/en_GB.json
+++ b/locales/en_GB.json
@@ -7,6 +7,7 @@
     },
     "source": {
         "livegDocs": "LiveG Docs",
+        "livegDocs_wordmark": " Docs",
 
         "docView_title": "{pageName} - LiveG Docs",
         "docView_showMenu": "Show menu",
