--- a/locales/en_GB.json
+++ b/locales/en_GB.json
@@ -16,7 +16,7 @@
         "docView_loadingArticle": "Loading article...",
 
         "productsView_tagline": "The hub for all of LiveG's help guides, technical references and more",
-        "productsView_search": "Serch through our documentation",
+        "productsView_search": "Search through our documentation",
 
         "productsView_noResults_title": "No results found",
         "productsView_noResults_description": "It seems that we don't have anything on the topic you searched for. Try searching for a similar topic or something else."
